[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/catapult.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Objects/Catapult.gd" type="Script" id=3]

[node name="Catapult" type="Node2D"]
position = Vector2( 254.342, 25.0148 )
rotation = -1.5708
script = ExtResource( 3 )
Maximum_Stretch = 50

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="LeftAnchor" type="Position2D" parent="."]

[node name="LeftBand" type="Line2D" parent="LeftAnchor"]
position = Vector2( -2, 0 )
z_index = -2
points = PoolVector2Array( -2, 0, -30, 0 )
width = 1.0
default_color = Color( 0.588235, 0.588235, 0.588235, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="RightAnchor" type="Position2D" parent="."]

[node name="RightBand" type="Line2D" parent="RightAnchor"]
position = Vector2( 2, 0 )
z_index = -2
points = PoolVector2Array( 2, 0, 30, 0 )
width = 1.0
default_color = Color( 0.588235, 0.588235, 0.588235, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 3.82209, 21.1536 )
[connection signal="clicked" from="Player" to="." method="_on_Player_clicked"]
[connection signal="dropped" from="Player" to="." method="_on_Player_dropped"]
